desafio de eventos terminado

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*---------- PROYECTO PENDIENTE PARA EL PROXIMO TRABAJO ENTREGABLE--------- */
+/*---------- INPUT --------- */
 .input-group {
     position: relative;
    }
