--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap");
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-main {
+.main {
   font-family: "Poppins", sans-serif;
   background: #f6f5f7;
   display: flex;
@@ -16,23 +18,22 @@ main {
   margin: -20px 0 50px;
 }
 
-h1 {
+.titulo {
   font-weight: bold;
   margin: 0;
 }
 
-p {
+.parrafo {
   font-size: 14px;
   font-weight: 100;
   line-height: 20px;
   letter-spacing: 0.5px;
 }
-
-span {
+.texto {
   font-size: 12px;
 }
 
-a {
+.social {
   color: #228be6;
   font-size: 20px;
   text-decoration: none;
@@ -81,15 +82,15 @@ a {
   border: 1px solid #be4bdb;
 }
 
-button:active {
+.button:active {
   transform: scale(0.95);
 }
 
-button:focus {
+.button:focus {
   outline: none;
 }
 
-button.ghost {
+.button.ghost {
   background: transparent;
   border-color: #fff;
 }
@@ -195,68 +196,68 @@ button.ghost {
 
 /*---------- INPUT ---------*/
 .input-group {
-    position: relative;
-   }
+  position: relative;
+}
    
-   .input {
-    border: solid 1.5px #9e9e9e;
-    border-radius: 1rem;
-    background: none;
-    padding: 1rem;
-    font-size: 1rem;
-    color: black;
-    transition: border 150ms cubic-bezier(0.4,0,0.2,1);
-    margin: 10px;
-   }
+.input {
+  border: solid 1.5px #9e9e9e;
+  border-radius: 1rem;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: black;
+  transition: border 150ms cubic-bezier(0.4,0,0.2,1);
+  margin: 10px;
+}
    
-   .user-label {
-    position: absolute;
-    left: 15px;
-    color: #e8e8e8;
-    pointer-events: none;
-    transform: translateY(1rem);
-    transition: 150ms cubic-bezier(0.4,0,0.2,1);
-    margin-top: 10px;
-    padding-left: 10px;
-   }
+.user-label {
+  position: absolute;
+  left: 15px;
+  color: #e8e8e8;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 150ms cubic-bezier(0.4,0,0.2,1);
+  margin-top: 10px;
+  padding-left: 10px;
+}
    
-   .input:focus, input:valid {
-    outline: none;
-    border: 1.5px solid #1a73e8;
-   }
+.input:focus, input:valid {
+  outline: none;
+  border: 1.5px solid #1a73e8;
+}
    
-   .input:focus ~ label, input:valid ~ label {
-    transform: translateY(-50%) scale(0.8);
-    background-color: white;
-    padding: 0 .2em;
-    color: #2196f3;
-   }
+.input:focus ~ label, input:valid ~ label {
+  transform: translateY(-50%) scale(0.8);
+  background-color: white;
+  padding: 0 .2em;
+  color: #2196f3;
+}
 
-   /* ------BOTON------*/
-button {
-    padding: 1.3em 3em;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    margin: 10px;
-  }
+/* ------BOTON------*/
+.button {
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin: 10px;
+}
   
-  button:hover {
-    background-color: #23c483;
-    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
+.button:hover {
+  background-color: #23c483;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
   
-  button:active {
-    transform: translateY(-1px);
-  } 
+.button:active {
+  transform: translateY(-1px);
+} 
